@@ -11,6 +11,7 @@ import com.example.pizzadash.dto.ProductPieDTO;
 import com.example.pizzadash.dto.ProductSummaryDTO;
 import com.example.pizzadash.dto.CategorySalesDTO;
 import com.example.pizzadash.dto.PaginatedResponse;
+import com.example.pizzadash.dto.StoreProductSalesDTO;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
@@ -20,6 +21,7 @@ import java.time.temporal.ChronoUnit;
 import java.util.List;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/api/products")
@@ -32,16 +34,15 @@ public class ProductController {
     private ProductService productService;
 
     private List<String> splitCsv(String csv) {
-        if (csv == null || csv.trim().isEmpty()) {
-            return new ArrayList<>();
-        }
-        return Arrays.asList(csv.split(","));
+        if (csv == null || csv.isBlank()) return new ArrayList<>();
+        return Arrays.stream(csv.split(",")).map(String::trim).filter(s -> !s.isEmpty()).toList();
     }
 
     @GetMapping("/ranking")
     public List<RankedProduct> getProductRankingWithTrend(
         @RequestParam String start,
-        @RequestParam String end
+        @RequestParam String end,
+        @RequestParam(required = false) String store
     ) {
        LocalDate currentStart = LocalDate.parse(start.trim());
         LocalDate currentEnd = LocalDate.parse(end.trim());
@@ -50,8 +51,8 @@ public class ProductController {
         LocalDate previousStart = currentStart.minusDays(days);
         LocalDate previousEnd = currentStart.minusDays(1);
 
-        List<RankingEntry> previous = orderService.getProductRanking(previousStart, previousEnd);
-        List<RankingEntry> current = orderService.getProductRanking(currentStart, currentEnd);
+        List<RankingEntry> previous = orderService.getProductRanking(previousStart, previousEnd, store);
+        List<RankingEntry> current = orderService.getProductRanking(currentStart, currentEnd, store);
 
         return orderService.compareRankings(previous, current);
     }
@@ -126,5 +127,40 @@ public class ProductController {
         List<String> storesList = splitCsv(stores);
         List<String> sizesList = splitCsv(sizes);
         return productService.getCategorySales(start, end, storesList, sizesList);
+    }
+
+    @GetMapping("/best-stores-for-product")
+    public List<StoreProductSalesDTO> getBestStoresForProduct(
+        @RequestParam String sku,
+        @RequestParam(required = false) String size,
+        @RequestParam String start,
+        @RequestParam String end
+    ) {
+        return productService.getBestStoresForProduct(sku, size, start, end);
+    }
+
+    @GetMapping("/flexible-filter")
+    public List<ProductBestsellerDTO> getProductsByFlexibleFilter(
+        @RequestParam String start,
+        @RequestParam String end,
+        @RequestParam(required = false) String productName,
+        @RequestParam(required = false) String size,
+        @RequestParam(required = false) String stores,
+        @RequestParam(required = false) String categories
+    ) {
+        List<String> storesList = splitCsv(stores);
+        List<String> categoriesList = splitCsv(categories);
+        return productService.getProductsByFlexibleFilter(start, end, productName, size, storesList, categoriesList);
+    }
+
+    @GetMapping("/search")
+    public List<Map<String, Object>> searchProducts(
+        @RequestParam String start,
+        @RequestParam String end,
+        @RequestParam(required = false) String searchTerm,
+        @RequestParam(required = false) String stores
+    ) {
+        List<String> storesList = splitCsv(stores);
+        return productService.getProductSearchResults(start, end, searchTerm, storesList);
     }
 }
